More minor cleanup